--- a/.gitignore
+++ b/.gitignore
@@ -8,14 +8,14 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
-# User-specific stuff
+# Users-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
 
-# AWS User-specific
+# AWS Users-specific
 .idea/**/aws.xml
 
 # Generated files
@@ -150,4 +150,4 @@ replay_pid*
 # Environment variables
 *.env
 
-# End of https://www.toptal.com/developers/gitignore/api/java,intellij
+# End of https://www.toptal.com/developers/gitignore/api/java,intellij!/database.db
